// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageNotice matches the snapshot by default 1`] = `null`;

exports[`LanguageNotice matches the snapshot when showLanguageNotice equals true 1`] = `
<p
  className="LanguageNotice__YoastLanguageNotice-rqos7w-0 knUhnB"
>
  Your site language is set to 
  <strong>
    English
  </strong>
  . If this is not correct, contact your site administrator.
</p>
`;

exports[`LanguageNotice matches the snapshot with a changed language link 1`] = `
<p
  className="LanguageNotice__YoastLanguageNotice-rqos7w-0 knUhnB"
>
  Your site language is set to 
  <strong>
    English
  </strong>
  . 
  <a
    className="LanguageNotice__ChangeLanguageLink-rqos7w-1 bLBXIC"
    href="http://www.example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Change language
    <span
      className="A11yNotice-fn2uwk-0 bXvUdO"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</p>
`;

exports[`LanguageNotice matches the snapshot with another language 1`] = `
<p
  className="LanguageNotice__YoastLanguageNotice-rqos7w-0 knUhnB"
>
  Your site language is set to 
  <strong>
    Nederlands
  </strong>
  . 
  <a
    className="LanguageNotice__ChangeLanguageLink-rqos7w-1 bLBXIC"
    href="http://www.example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Change language
    <span
      className="A11yNotice-fn2uwk-0 bXvUdO"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</p>
`;
